--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,4 +49,16 @@
         android:onClick="method7"
         android:text="单文件上传" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="method8"
+        android:text="与RxJava结合使用" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="method9"
+        android:text="Retrofit简单封装" />
+
 </LinearLayout>
